--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -6,8 +6,8 @@ import { AstroSeo } from "@astrolib/seo";
 Use AstroSeo in all the pages you want different Seo than the index page
 -->
 <AstroSeo
-  title="Lexington Themes"
-  description="Your site description goes here"
+  title="SDET Guide"
+  description="Comprehensive preparation guide for your next SDET Interview"
   canonical="https://www.lexingtonthemes.com"
   openGraph={{
     url: "https://www.lexingtonthemes.com",
